An explanatory and descriptive commit message here

--- a/.databricks/project.json
+++ b/.databricks/project.json
@@ -1,4 +1,5 @@
 {
   "profile": "DEFAULT",
+  "clusterId": "0420-004808-zhio5uzq",
   "workspacePath": "/Repos/deepak.gattala@databricks.com/databricks"
 }
